# simple_trading_system

./: .env.example  .gitignore  README.md  __init__.py  alpaca_trader.py  backtest.py  config.py  data_provider.py  main.py  pyproject.toml  strategy.py  test_system.py
